Fix title spacing for education-title and profile photo text overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@ h2 {
 
 h3 {
   color: var(--grey);
-  margin-left: 30px;
   
 }
 
@@ -121,7 +120,7 @@ ul {
   width: 30%;
   float: left;
   margin-right: 5%;
-  margin-bottom: 5%;
+  margin-bottom: 15%;
   border-radius: 10em;
   border: 2px solid transparent;
   border-color: var(--navy-blue);
@@ -226,6 +225,7 @@ ul {
   margin-left: auto;
   margin-right: auto;
   margin-top: 3%;
+  
 }
 
 #education h5 {
